syntax = "proto3";

option java_package = "com.cseiu.passnet.saga.classroomsaga";

package consumeEvents;

service EventConsumer {
  rpc ConsumePostNewJobEvent (PostNewJobEvent) returns (SagaResponse) {}
  rpc ConsumeAcceptStudentApplicationEvent (AcceptStudentApplicationEvent) returns (SagaResponse) {}
  rpc ConsumeRemoveStudentApplicationEvent (RemoveStudentApplicationEvent) returns (SagaResponse) {}
  rpc ConsumeDeleteJobEvent (DeleteJobEvent) returns (SagaResponse) {}
}

message SagaResponse {
  string message = 1;
}

message PostNewJobEvent {
  string ownerId = 1;
  string jobId = 2;
}

message AcceptStudentApplicationEvent {
  string jobId = 1;
  string taId = 2;
}

message RemoveStudentApplicationEvent {
  string jobId = 1;
  string taId = 2;
}

message DeleteJobEvent {
  string jobId = 1;
}